# BrickGPT

./: .gitignore  README.md  index.html  output-OG.ldr  output-OG.txt  output.ldr  output.txt  pyproject.toml  resize-images.js  style.css  styles.css
css/: demo.css
demo/: index.html
favicon/: site.webmanifest
images/: styles.css
src/legogpt/: render_lego.py
src/legogpt/data/: lego_structure.py
src/legogpt/models/: legogpt.py
